Moved more recomputations of the tutorial from bash to Java